feat(prefab): New tools (#319)
* wip

* feat: jiggle

* refactor(prefabs): DRY up the ui a bit before it gets out of hand

* refactor(prefabs): tidy up time

* wip

* wip

* ramps

* fix: Jrr

* feat(clockwork-carnage): custom spawn positions without using ISF_REQ_JOIN

* feat(clockwork-carnage): ui updates

* feat(clockwork-carnage): dicking around with background buttons

* feat(insim_core): add an Unknown object type, fixes #323

* wip

* fix: be more relaxed with specific crates, fixes #324

--- a/examples/prefabs/prefabs.yaml
+++ b/examples/prefabs/prefabs.yaml
@@ -283,3 +283,25 @@
       colour: White
       mapping: 0
       floating: false
+- name: woot
+  objects:
+    - !Banner
+      xyz:
+        x: 0
+        y: 0
+        z: 0
+      heading:
+        radians: -1.055378782065321
+      colour: White
+      mapping: 0
+      floating: false
+    - !Banner
+      xyz:
+        x: -14
+        y: -119
+        z: 0
+      heading:
+        radians: -1.055378782065321
+      colour: White
+      mapping: 0
+      floating: false
