--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,24 +40,24 @@ broken_intra_doc_links = "deny"
 arrayvec = "0.7.6"
 bitflags = "2.10.0"
 bytes = "1.11.1"
-clap = { version = "4.5.58" }
-criterion = { version = "0.8.2" }
+clap = = "4.5.58"
+criterion = "0.8.2"
 darling = "0.23.0"
-encoding_rs = { version = "0.8.35" }
+encoding_rs = "0.8.35"
 fixedbitset = "0.5.7"
 from_variants = "1.0.2"
 futures = "0.3.31"
 glam = "0.32.0"
 indexmap = "2.13.0"
-itertools = { version = "0.14.0" }
+itertools = "0.14.0"
 proc-macro2 = "1"
 quote = "1"
-serde = { version = "1.0.228" }
+serde = "1.0.228"
 smallvec = "1.15.1"
-syn = { version = "2" }
+syn = "2"
 thiserror = "2.0.18"
-tokio = { version = "1.49.0" }
+tokio = "1.49.0"
 tokio-test = "0.4.5"
 tokio-util = "0.7.18"
 tracing = "0.1.44"
-tracing-subscriber = { version = "0.3.22" }
+tracing-subscriber = "0.3.22"
