--- a/examples/prefabs-egui/Cargo.toml
+++ b/examples/prefabs-egui/Cargo.toml
@@ -11,6 +11,7 @@ homepage.workspace = true
 [dependencies]
 eframe = "0.33.3"
 egui_plot = "0.34.1"
+glam = { workspace = true }
 image = { version = "0.24", features = ["png"] }
 insim_core = { path = "../../insim_core" }
 insim_lyt = { path = "../../insim_lyt" }
